# NilsPodLib

./: .bumpversion.toml  .gitignore  .gitlab-ci.yml  .prospector.yml  .readthedocs.yml  .ruff.toml  CHANGELOG.md  MANIFEST.in  README.md  README.txt  _tasks.py  dodo.py  pyproject.toml  requirements.txt  requirements_docs.txt  setup.py  tox.ini  updatePackage.sh
.claude/skills/python-release-workflow/: SKILL.md
.github/workflows/: publish.yml  test-and-lint.yml
NilsPodLib/: __init__.py  _session_base.py  calibrationData.py  calibration_data.py  calibration_utils.py  consts.py  dataStream.py  data_stream.py  dataset.py  datastream.py  exceptions.py  header.py  interfaces.py  legacy.py  parseBinary.py  parse_binary.py  session.py  utils.py
NilsPodLib/Calibration/: InSoleCreateCalibration.py
NilsPodLib/Calibration/CalibrationFiles/: NRF52-84965C0.pickle  NRF52-92338C81.pickle
SensorDataImport/: dataset.py  header.py  headerFreeRTOS.py  loadAndroidBin.py  loadBinary.py  session.py  signalProcessing.py
SensorDataImport.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: Calibration.md  Legacy.md  Warnings.md  conf.py  index.rst
docs/auto_examples/: index.rst  load_sensor_data.ipynb  load_sensor_data.py  load_sensor_data.py.md5  load_sensor_data.rst  load_sensor_session.ipynb  load_sensor_session.py  load_sensor_session.py.md5  load_sensor_session.rst  sg_execution_times.rst
docs/examples/: index.rst  load_sensor_data.ipynb  load_sensor_data.py  load_sensor_data.py.md5  load_sensor_data.rst  load_sensor_session.ipynb  load_sensor_session.py  load_sensor_session.py.md5  load_sensor_session.rst  sg_execution_times.rst
docs/guides/: calibration.md  calibration.rst  index.rst  legacy.rst  warnings.rst
docs/modules/: NilsPodLib._session_base.rst  NilsPodLib.calibration_utils.rst  NilsPodLib.consts.rst  NilsPodLib.dataset.rst  NilsPodLib.datastream.rst  NilsPodLib.exceptions.rst  NilsPodLib.header.rst  NilsPodLib.interfaces.rst  NilsPodLib.legacy.rst  NilsPodLib.rst  NilsPodLib.session.rst  NilsPodLib.utils.rst  calibration_utils.rst  consts.rst  dataset.rst  datastream.rst  exceptions.rst  header.rst  index.rst  legacy.rst  modules.rst  session.rst  utils.rst
examples/: README.txt  creating_calibrations.py  homeMonitoringLabelTest.py  loadSensorData.py  loadSensorSession.py  load_sensor_data.py  load_sensor_session.py
nilspodlib/: __init__.py  _session_base.py  calibration_utils.py  consts.py  dataset.py  datastream.py  exceptions.py  header.py  legacy.py  session.py  utils.py
src/nilspodlib/: __init__.py  _session_base.py  calibration_utils.py  consts.py  dataset.py  datastream.py  exceptions.py  header.py  legacy.py  session.py  utils.py
tests/: conftest.py  test_calibration_utils.py  test_calibrations.py  test_dataset.py  test_datastream.py  test_header.py  test_io.py  test_legacy.py  test_session.py  test_synced_session.py  test_utils.py
tests/test_data/11_2_legacy_sample/: NilsPodX-8433_20190412_172203_data.csv  NilsPodX-8433_20190412_172203_header.json
tests/test_data/12_0_legacy_sample/: NilsPodX-7FAD_20190430_0933_data.csv  NilsPodX-7FAD_20190430_0933_header.json
tests/test_data/14_1_legacy_sample/: NilsPodX-4BFA_20190611_1348_header.json
tests/test_data/14_1_sample/: NilsPodX-4BFA_20190611_1348_data.csv  NilsPodX-4BFA_20190611_1348_header.json
tests/test_data/16_2_legacy_sample/: NilsPodX-6F13_20210109_121625_data.csv  NilsPodX-6F13_20210109_121625_header.json
tests/test_data/18_0_sample/: NilsPodX-6F13_20210109_152726_data.csv  NilsPodX-6F13_20210109_152726_header.json  NilsPodX-6F13_20210109_162824_data.csv  NilsPodX-6F13_20210109_162824_header.json
tests/test_data/sample_session_regression/: NilsPodX-7FAD_20190430_0933_data.csv  NilsPodX-7FAD_20190430_0933_header.json  NilsPodX-922A_20190430_0933_header.json
