[project]
name = "nilspodlib"
version = "4.1.2"
description = "A Python library to load and convert sensor data recorded by a NilsPod by Portablies."
authors = [
    { name = "Arne Küderle", email = "arne.kuederle@fau.de" },
    { name = "Nils Roth", email = "nils.roth@fau.de" },
    { name = "Robert Richer", email = "robert.richer@fau.de" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "sensors",
    "scientific",
    "IMU",
    "accelerometer",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23.2",
    "pandas>=1.1.3",
    "scipy>=1.5.2",
    "imucal>=2.0.0",
    "pytz>=2024.1",
    "typing-extensions>=4.3.0",
]

[project.urls]
Homepage = "https://github.com/mad-lab-fau/NilsPodLib"
Repository = "https://github.com/mad-lab-fau/NilsPodLib"
Documentation = "https://nilspodlib.readthedocs.io/en/latest/"

[tool.hatch.build.targets.sdist]
include = ["src/nilspodlib"]

[tool.hatch.build.targets.wheel]
include = ["src/nilspodlib"]

[tool.hatch.build.targets.wheel.sources]
"src/nilspodlib" = "nilspodlib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=6.4.4",
    "recommonmark>=0.6.0",
    "memory_profiler>=0.57.0",
    "matplotlib>=3.5.3",
    "toml>=0.10.2",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "Sphinx>=5.1.1",
    "numpydoc>=1.4.0",
    "sphinx-gallery>=0.11.1",
    "pydata-sphinx-theme>=0.9.0",
    "isort>=5.10.1",
    "poethepoet>=0.16.0",
    "ruff>=0.15.1,<0.16",
]

[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=src --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
version = { "script" = "_tasks:task_update_version" }
